<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameSurnameTil"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginBottom="87dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/name_surname_edit_text"
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:background="@color/grey_bright"
            android:hint="@string/edit_text_hint_name_surname"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="@color/grey_normal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="317dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:background="@color/grey_bright"
            android:hint="@string/edit_text_hint_email"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="@color/grey_normal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="317dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="360dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:layout_marginBottom="52dp"
            android:background="@color/grey_bright"
            android:hint="@string/edit_text_hint_password"
            android:inputType="textPassword"

            android:padding="5dp"
            android:textColor="@color/grey_normal"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/signup_button"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint="@color/green_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>